Fixed overflow on mobile, with overflow hidden on header

--- a/style.css
+++ b/style.css
@@ -72,6 +72,11 @@ p {
 
 /* Header */
 
+header {
+    overflow: hidden;
+    position: relative;
+}
+
 /* Brand */
 
 .brand {
